src/components/bem-blocks/benefits.scss
.benefits {
    padding-top: 40px;
    padding-bottom: 40px;
    background-color: #f1f1f1;
}

.benefits__title {
    font-family: 'Montserrat', sans-serif;
    font-size: 2em;
    font-weight: 700;
    margin-bottom: 40px;
}

.benefits__list {
    display: flex;
    flex-wrap: wrap;
    gap: 32px;
}

.benefits__item-image-wrapper {
    width: 100%;
    height: 180px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px; //border-radius у benefits__item не затрагивает image-wrapper'ы
}

.benefits__item {
    background-color: #fff;
    border-radius: 5px;
    max-width: 324px;
    box-shadow: 0px 6px 14px rgba(0, 0, 0, 0.1);

    &:nth-child(1) .benefits__item-image-wrapper {
        background: url(../img/benefit-audio-accompaniment.jpg) center center / cover no-repeat;
    }

    &:nth-child(2) .benefits__item-image-wrapper {
        background: url(../img/benefit-varied-food.jpg) center center / cover no-repeat;
    }

    &:nth-child(3) .benefits__item-image-wrapper {
        background: url(../img/benefit-safety.jpg) center center / cover no-repeat;
    }

    &:nth-child(4) .benefits__item-image-wrapper {
        background: url(../img/benefit-amazing-photo.jpg) center center / cover no-repeat;
    }
}

.benefits__item-text-wrapper {
    padding: 36px 24px 36px 24px;
}

.benefits__item-title {
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
    font-size: 1.125em;
    margin-bottom: 10px;
}

.benefits__item-description {
    font-size: 0.875em;
    color: #5a5a5a;
    line-height: 1.5;
}

@media screen and (min-width: 768px) {
    .benefits {
        padding-top: 80px;
        padding-bottom: 80px;
    }

    .benefits__title {
        font-size: 2.25em;
        margin-bottom: 60px;
    }
}

@media screen and (min-width: 1440px) {
    .benefits__title {
        margin-bottom: 30px;
    }

    .benefits__list {
        justify-content: space-between;
        align-items: stretch;
    }   

    .benefits__item {
        width: 288px;
    }
}

